# shape_game

./: .gitattributes  Android.mk  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.android  Dockerfile.linux  Dockerfile.wasm  Dockerfile.windows  LICENSE  README.md  build_all.sh  main.cpp
android/: AndroidManifest.xml
assets/: atlas.txt
cmake/: x86_64-w64-mingw32.cmake
scripts/: atlas.txt  font_json_to_txt.py
src/: audio.cpp  audio.hpp  color_palette.hpp  debug.hpp  font.cpp  font.hpp  geometry.cpp  geometry.hpp  gl_helper.cpp  gl_helper.hpp  log.hpp  main.cpp  shader.cpp  shader.hpp  stb_vorbis.cpp  stb_vorbis.hpp
wasm/: index.html
